--- a/resources/configmap.yaml
+++ b/resources/configmap.yaml
@@ -3,7 +3,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: micro-client-env
+  name: micro-env
 data:
-  MICRO_REGISTRY: kubernetes
 #  MICRO_CLIENT: grpc
+#  MICRO_SERVER: grpc
+  MICRO_REGISTRY: kubernetes
+#  MICRO_SERVER_NAME: micro-server
+#  MICRO_SERVER_VERSION: latest
