Latest working version

--- a/resources/configmap.yaml
+++ b/resources/configmap.yaml
@@ -8,5 +8,5 @@ data:
 #  MICRO_CLIENT: grpc
 #  MICRO_SERVER: grpc
   MICRO_REGISTRY: kubernetes
-#  MICRO_SERVER_NAME: micro-server
-#  MICRO_SERVER_VERSION: latest
+  MICRO_SERVER_NAME: micro-server
+  MICRO_SERVER_VERSION: latest
