Updated project, non working version

--- a/resources/configmap.yaml
+++ b/resources/configmap.yaml
@@ -5,7 +5,7 @@ kind: ConfigMap
 metadata:
   name: micro-env
 data:
-#  MICRO_CLIENT: grpc
+  MICRO_CLIENT: grpc
 #  MICRO_SERVER: grpc
   MICRO_REGISTRY: kubernetes
   MICRO_SERVER_NAME: micro-server
